<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/margin_double_wide">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcome_user"
            style="@style/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/instruction_one_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcome_text"
            style="@style/normal_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_double_wide"
            android:gravity="center"
            android:text="@string/instruction_two_text" />

        <Button
            android:id="@+id/see_models_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_double_wide"
            android:text="@string/see_models_text"
            android:textColor="@color/colorPrimary" />


    </LinearLayout>
</layout>