<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.screens.login.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_loginFragment_to_onboardingWelcomeFragment"
            app:destination="@id/onboardingWelcomeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
        <argument
            android:name="user"
            android:defaultValue=" "
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/onboardingWelcomeFragment"
        android:name="com.udacity.shoestore.screens.onboarding.OnboardingWelcomeFragment"
        android:label="@string/welcome_title"
        tools:layout="@layout/fragment_onboarding_welcome">
        <action
            android:id="@+id/action_onboardingWelcomeFragment_to_onboardingInstructionsFragment"
            app:destination="@id/onboardingInstructionsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
    </fragment>

    <fragment
        android:id="@+id/onboardingInstructionsFragment"
        android:name="com.udacity.shoestore.screens.onboarding.OnboardingInstructionsFragment"
        android:label="@string/Instructions_title"
        tools:layout="@layout/fragment_onboarding_instructions">
        <action
            android:id="@+id/action_onboardingInstructionsFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.screens.shoe.ShoeListFragment"
        android:label="@string/shoes_list_title"
        tools:layout="@layout/fragment_shoe_list">
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
    </fragment>

    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.screens.shoe.ShoeDetailFragment"
        android:label="@string/shoe_register_title"
        tools:layout="@layout/fragment_shoe_detail" />
</navigation>